# HiFiGAN-for-JAX

./: .gitignore  .nojekyll  .pre-commit-config.yaml  HiFiGAN.ipynb  HiFiGAN.py  HiFiGAN_for_XTTS.ipynb  HiFiGAN_for_XTTS.py  README.md  copy-weights.ipynb  corret.ipynb  export.py  inference_test.ipynb  melspec_tests.ipynb  pyproject.toml  test.ipynb  train_hifigan.py
assets/: bib.bibtex
hifigan/: __init__.py  discriminators.py  generator.py  trainer.py  utils.py
src/hifigan/: __init__.py  generator.py  losses.py  trainer.py
tests/: test_discriminators.py
